--- a/app/views/pages/live.html.erb
+++ b/app/views/pages/live.html.erb
@@ -1,31 +1,26 @@
-<h1>Reports Ao vivo: </h1>
+<h1>Live! Eventos reportados: <%= @reports.length %></h1>
 
 <table>
   <thead>
     <tr>
+      <th>#</th>
       <th>Title</th>
       <th>Description</th>
-      <th>Status</th>
       <th>Email</th>
       <th>Image</th>
-      <th>Lat</th>
-      <th>Lng</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="live-tbody">
     <% @reports.each do |report| %>
       <tr>
+        <td><%= report.id %></td>
         <td><%= report.title %></td>
         <td><%= report.description %></td>
-        <td><%= report.status.name %></td>
         <td><%= report.email %></td>
-        <td><%= report.image %></td>
-        <td><%= report.lat %></td>
-        <td><%= report.lng %></td>
+        <td><%= report.image_name %></td>
         <td><%= link_to 'Show', report %></td>
-        <td><%= link_to 'Edit', edit_report_path(report) %></td>
       </tr>
     <% end %>
   </tbody>
