--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -23,12 +23,11 @@
         <td><%= report.description %></td>
         <td><%= report.status.name %></td>
         <td><%= report.email %></td>
-        <td><%= report.image %></td>
+        <td><%= report.image_name %></td>
         <td><%= report.lat %></td>
         <td><%= report.lng %></td>
         <td><%= link_to 'Show', report %></td>
         <td><%= link_to 'Edit', edit_report_path(report) %></td>
-        <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
