--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Image:</strong>
-  <%= @report.image %>
+  <img src="<%=@report.image%>"/>
 </p>
 
 <p>
@@ -41,4 +41,3 @@
 </p>
 
 <%= link_to 'Edit', edit_report_path(@report) %> |
-<%= link_to 'Back', reports_path %>
