--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,10 +1,19 @@
 body {
   background-color: #fff;
   color: #333;
-  margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+.container{
+  margin: 33px;
+}
+
+h1{
+  text-align: center;
 }
 
 p, ol, ul, td {
