--- a/app/views/pages/live.html.erb
+++ b/app/views/pages/live.html.erb
@@ -1,14 +1,15 @@
-<h1>Live! Eventos reportados: <%= @reports.length %></h1>
-
+<div class="live-image">
+  <%= image_tag "live.gif" %>
+</div>
+<h1>Eventos reportados: <%= @reports.length %></h1>
 <table>
   <thead>
     <tr>
       <th>#</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Email</th>
-      <th>Image</th>
-      <th colspan="3"></th>
+      <th>Título</th>
+      <th>Descrição</th>
+      <th>E-mail</th>
+      <th>Imagem</th>
     </tr>
   </thead>
 
@@ -20,7 +21,7 @@
         <td><%= report.description %></td>
         <td><%= report.email %></td>
         <td><%= report.image_name %></td>
-        <td><%= link_to 'Show', report %></td>
+        <td><%= link_to 'Info', report %></td>
       </tr>
     <% end %>
   </tbody>
