--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -36,7 +36,7 @@
 
   <div class="field">
     <label for="observation">Observação</label>
-    <%= form.text_area :observation, id: :report_observation %>
+    <%= form.text_area :observation, id: :report_observation, required: true %>
   </div>
 
   <div class="actions">
