--- a/app/views/pages/live.html.erb
+++ b/app/views/pages/live.html.erb
@@ -1,7 +1,7 @@
 <div class="live-image">
   <%= image_tag "live.gif" %>
 </div>
-<h1>Eventos reportados: <%= @reports.length %></h1>
+<h1>Eventos reportados: </h1>
 <table>
   <thead>
     <tr>
